fix over flow on mobile

--- a/src/layouts/components/navbar/index.scss
+++ b/src/layouts/components/navbar/index.scss
@@ -36,12 +36,12 @@
       .user-point-wrapper {
         position: relative;
 
-        &>svg {
+        & > svg {
           max-height: 50px;
           max-width: 180px;
         }
 
-        &>span {
+        & > span {
           font-weight: bold;
           font-size: 18px;
           line-height: 22px;
@@ -60,7 +60,7 @@
         justify-content: space-between;
         margin-right: 20px;
 
-        &>span {
+        & > span {
           font-style: normal;
           font-weight: bold;
           font-size: 18px;
@@ -114,7 +114,7 @@
       overflow: hidden;
       user-select: none;
 
-      &>svg {
+      & > svg {
         max-width: 100%;
       }
 
@@ -193,7 +193,7 @@
             transition: transform 0.1s ease-in-out;
           }
 
-          &>span {
+          & > span {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -252,7 +252,7 @@
     transform: translate(-50%, -70%);
     user-select: none;
 
-    &>p {
+    & > p {
       font-weight: bold;
       font-size: 30px;
       line-height: 36px;
@@ -289,7 +289,7 @@
     box-shadow: none;
   }
 
-  &>button {
+  & > button {
     background-color: transparent;
 
     &:hover,
@@ -307,6 +307,9 @@
   background-color: transparent;
   border: none;
   z-index: 0;
+  padding: 0px;
+  width: 0px;
+  min-width: auto;
 }
 
 .dropdown-header {
